src/test/06-Errors/error-no-memb2.txt
error-no-memb2.ck:3:5: error: class 'SinOsc' has no member 'test'
[3] foo.test();
        ^
